# synthEngine

./: CMakeLists.txt  README.md
include/: Actors.hpp  Cameras.hpp  Lights.hpp  Meshes.hpp  Shaders.hpp  Textures.hpp  Transformations.hpp  Worlds.hpp
src/: Actors.cpp  Cameras.cpp  Lights.cpp  Meshes.cpp  Shaders.cpp  Textures.cpp  Transformations.cpp  Worlds.cpp  main.cpp
src/shaders/: nop.frag.glsl  nop.vert.glsl
